@@ -10,7 +10,7 @@ FLAGS = -DUSG -DINCORE $(EUC) -I. -I.. -DMACDIR='"$(MACDIR)"' \
 .c.o:
 	$(CC) $(CFLAGS) $(WARN) $(CPPFLAGS) $(FLAGS) -c $<
 
-all: troff ta
+all: troff ta otfdump
 
 troff: $(OBJ) $(LIBHNJ)/libhnj.a
 	$(CC) $(LDFLAGS) $(OBJ) -L$(LIBHNJ) -lhnj $(LIBS) -o troff
@@ -18,15 +18,21 @@ troff: $(OBJ) $(LIBHNJ)/libhnj.a
 ta: draw.o ta.o
 	$(CC) $(LDFLAGS) draw.o ta.o $(LIBS) -lm -o $@
 
+otfdump: otfdump.o
+	$(CC) $(LDFLAGS) otfdump.o $(LIBS) -o $@
+
 install:
 	$(INSTALL) -c troff $(ROOT)$(BINDIR)/troff
 	$(STRIP) $(ROOT)$(BINDIR)/troff
 	$(INSTALL) -c ta $(ROOT)$(BINDIR)/ta
 	$(STRIP) $(ROOT)$(BINDIR)/ta
+	$(INSTALL) -c otfdump $(ROOT)$(BINDIR)/otfdump
+	$(STRIP) $(ROOT)$(BINDIR)/otfdump
 	$(INSTALL) -c -m 644 troff.1b $(ROOT)$(MANDIR)/man1b/troff.1b
+	$(INSTALL) -c -m 644 otfdump.1b $(ROOT)$(MANDIR)/man1b/otfdump.1b
 
 clean:
-	rm -f $(OBJ) draw.o ta.o troff ta core log *~
+	rm -f $(OBJ) draw.o ta.o troff ta otfdump otfdump.o core log *~
 
 mrproper: clean
 
@@ -52,3 +58,4 @@ suftab.o: ../suftab.c
 version.o: ../version.c
 afm.o: dev.h afm.h
 otf.o: dev.h afm.h
+otfdump.o: afm.h afm.c otf.c otfdump.c dpost.d/getopt.c dev.h ../version.c
