@@ -5,11 +5,14 @@
 #else
 #define	USED
 #endif
-#ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.25 (gritter) 9/30/05";
-#else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.25 (gritter) 9/30/05";
-#endif	/* !NROFF */
+#if defined (DUMP)
+static const char sccsid[] USED =
+	"@(#)/usr/ucb/otfdump.sl	4.27 (gritter) 9/30/05";
+#elif defined (NROFF)
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.27 (gritter) 9/30/05";
+#else	/* !DUMP, !NROFF */
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.27 (gritter) 9/30/05";
+#endif	/* !DUMP, !NROFF */
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -33,12 +36,13 @@ nroff.d/n10.c: * Sccsid @(#)n10.c	1.19 (gritter) 9/11/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.21 (gritter) 9/18/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.23 (gritter) 9/30/05
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
-troff.d/afm.c: * Sccsid @(#)afm.c	1.34 (gritter) 9/30/05
-troff.d/afm.h: * Sccsid @(#)afm.h	1.14 (gritter) 9/30/05
-troff.d/dev.h: * Sccsid @(#)dev.h	1.7 (gritter) 9/8/05
+troff.d/afm.c: * Sccsid @(#)afm.c	1.35 (gritter) 9/30/05
+troff.d/afm.h: * Sccsid @(#)afm.h	1.15 (gritter) 9/30/05
+troff.d/dev.h: * Sccsid @(#)dev.h	1.8 (gritter) 9/30/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.7 (gritter) 9/30/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.8 (gritter) 9/30/05
+troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.1 (gritter) 9/30/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.30 (gritter) 9/30/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.49 (gritter) 9/30/05
 troff.d/t6.c: * Sccsid @(#)t6.c	1.92 (gritter) 9/30/05
